tests/neg-custom-args/captures/unsound-reach-4.check
-- Error: tests/neg-custom-args/captures/unsound-reach-4.scala:22:19 ---------------------------------------------------
22 |    escaped = boom.use(f)  // error
   |              ^^^^^^^^
   |              Reach capability backdoor* and universal capability cap cannot both
   |              appear in the type (x: F): box File^{backdoor*} of this expression
